fix: header align items

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -10,13 +10,19 @@
   min-height: 62px;
 }
 
+.titleContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
 .title {
   font-weight: 600;
 }
 .searchContainer {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-start;
   gap: 2rem;
   padding: 1rem;
@@ -30,7 +36,25 @@
   padding: 1rem;
 }
 
+.avatarContainer {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (max-width: 700px) {
+  .titleContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
   .searchContainer {
     flex-direction: column;
     align-items: flex-start;
